# vitos-pizza-cafe

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README-CN.md  README-Jenkins-CN.md  README-Jenkins.md  README.md  STREAMING_IMPLEMENTATION_PLAN.md  customer_info.md  customer_info_tb.md  docker-compose.yml  pipeline.groovy  pyproject.toml  restart_backend.sh  restart_frontend.sh  start_backend.sh  start_frontend.sh  stop_backend.sh  stop_frontend.sh
Vitos-Pizza-Cafe-KB/: delivery_and_pickup.md  menu_and_ordering.md
backend/: api.py  callbacks.py  chat_service.py  config.py  database.py  knowledge_base.py  llm.py  mcp_tools.py
backend/security/: __init__.py  airs_scanner.py
design/: GENERIC_STREAMING_AIRS_PROTECTION.md  STREAMING_AIRS_PROTECTION.md  STREAMING_IMPLEMENTATION_PLAN.md
diagrams/: app-only.excalidraw  aws.drawio  chatgpt.excalidraw  vitos_airs.excalidraw  vitos_architecture.excalidraw
frontend/: config.example.js  index.html  script.js  style.css
kb/: company.md  customer_info.md
litellm/: .env.example  docker-compose.yml  litellm_config.yaml  start_litellm.sh  stop_litellm.sh
pan-mcp-relay/: mcp-relay.yaml.example  start_pan_mcp_relay.sh
prompts/: jailbreak.md
python/: check.py
scripts/: generate_frontend_config.sh
tests/: api_client.py  test_api_integration.py  test_basic_api.py  test_litellm_health.py  test_prisma_airs.py  test_streaming_airs.py
tests/unit/: test_api.py  test_chat_service.py  test_streaming_airs.py
