    [build-system]
    requires = ["setuptools>=61.0", "wheel"]
    build-backend = "setuptools.build_meta"

    [project]
    name = "vitos-pizza-cafe"
    version = "1.0.0"
    description = "AI customer service application demonstrating AI security vulnerabilities and mitigation"
    readme = "README.md"
    license = {text = "MIT"}
    authors = [
        {name = "Vito's Pizza Cafe Team"}
    ]
    classifiers = [
        "Development Status :: 4 - Beta",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
    ]
    requires-python = ">=3.9"
    dependencies = [
        "python-dotenv>=1.1.0",
        "langchain>=1.0.3",
        "langchain-core>=1.0.0",
        "langchain-openai>=1.0.0",
        "langchain-community>=0.4.0",
        "langchain-mcp-adapters>=0.1.10",
        "faiss-cpu>=1.10.0",
        "fastapi>=0.104.1",
        "uvicorn>=0.24.0",
        "httpx>=0.25.0",
        "pydantic>=2.5.0",
        "langgraph>=0.6.7",
        "pytest>=8.4.2",
        "pytest-asyncio>=0.23.0",
        "requests>=2.31.0",
        "pan-aisecurity>=0.7.0",

    ]

    [project.optional-dependencies]
    test = [
        "pytest>=7.4.0",
        "pytest-asyncio>=0.21.0",
        "pytest-cov>=4.1.0",
    ]
    dev = [
        "pytest>=7.4.0",
        "pytest-asyncio>=0.21.0",
        "pytest-cov>=4.1.0",
        "ruff>=0.1.0",
    ]

    [tool.setuptools.packages.find]
    where = ["."]
